force-app/main/default/objects/Ack_Setting__mdt/Ack_Setting__mdt.object-meta.xml
<CustomObject>
    <description
  >Admin-editable configuration for donation acknowledgement emails (template, folder, and optional org-wide send address). The single record with Active__c = true is used at runtime.</description>
    <label>Ack Setting</label>
    <pluralLabel>Ack Settings</pluralLabel>
</CustomObject>