force-app/main/default/objects/Ack_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Whether this is the active Ack Setting record. Only one record should be Active at a time; the first Active record found is used.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>