force-app/main/default/objects/Ack_Setting__mdt/fields/Org_Wide_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_Email_Address__c</fullName>
    <description
  >Email address string of the OrgWideEmailAddress to send acknowledgements from. Leave blank to use the organization's Default No-Reply Address.</description>
    <label>Org-Wide Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>