force-app/main/default/objects/Ack_Setting__mdt/fields/Template_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Template_DeveloperName__c</fullName>
    <description
  >Developer Name of the EmailTemplate to use for donation acknowledgements.</description>
    <label>Template Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>