force-app/main/default/objects/Ack_Setting__mdt/fields/Template_Folder__c.field-meta.xml
<CustomField>
    <fullName>Template_Folder__c</fullName>
    <description
  >Developer Name of the folder containing the donation acknowledgement EmailTemplate.</description>
    <label>Template Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>